basetextoverlay: always intersect with the filter caps

Avoids returning values that upstream can't produce

https://bugzilla.gnome.org/show_bug.cgi?id=733916